# display_drivers

./: CMakeLists.txt  README.md  flake.nix
.github/workflows/: cmake.yml
core/: lcd_base.c  lcd_base.h  m3x6_16pt.c
simulator/st7735/: controller.hh
src/: CMakeLists.txt
src/core/: font.h  lcd_base.c  lcd_base.h  lucida_console_10pt.h  lucida_console_12pt.h  m3x6_16pt.h  m5x7_16pt.c  m5x7_16pt.h
src/st7735/: lcd_st7735.c  lcd_st7735.h  lcd_st7735_cmds.h  lcd_st7735_init.h
st7735/: lcd_st7735.c  lcd_st7735.h  lcd_st7735_cmds.h
tests/: CMakeLists.txt  main.cc
tests/golden_files/: st7735_startup.txt
tools/fontgen/: Cargo.toml
tools/fontgen/src/: main.rs
